# py-roguelike-1

./: .gitignore  README.md  pyproject.toml  setup.py  todos.md
.github/workflows/: build_executables.yml  cicd.yml
scripts/: copy-assets-to-dist.py  windows-install-dependency-walker.py
src/: main.py  tstt_rl.py
src/py_roguelike_external_tools/: behavior-tree-yml-to-mermaid.py
src/py_roguelike_tutorial/: actions.py  colors.py  constants.py  consumable.py  engine.py  entity.py  entity_deserializers.py  entity_factory.py  event_bus.py  exceptions.py  game_map.py  game_world.py  input_handers.py  input_handlers.py  loader.py  main.py  math.py  message_log.py  pathfinding.py  procgen.py  procgen_wang.py  render_functions.py  screen_stack.py  setup_game.py  subscribers.py  tile_types.py  types.py  utils.py
src/py_roguelike_tutorial/behavior_trees/: behavior_trees.py  behaviors.py  blackboard.py  custom.py  validators.py
src/py_roguelike_tutorial/components/: ai.py  base_component.py  base_components.py  consumable.py  equipment.py  equipment_type.py  equippable.py  faction.py  factions_manager.py  fighter.py  health.py  interactable.py  inventory.py  level.py  procgen_config.py  ranged.py  vision.py
src/py_roguelike_tutorial/events/: event_bus.py  events.py  subscribers.py
src/py_roguelike_tutorial/experiments/: wang_tiling.py
src/py_roguelike_tutorial/handlers/: area_ranged_attack_handler.py  ask_user_event_handler.py  base_event_handler.py  character_sheet_menu.py  confirmation_popup.py  dialogue_event_handler.py  key_map.py  (+13 more)
tests/: test_example.py
(+19 files in other folders)
